added some divs, classes and lists

--- a/template/index.html
+++ b/template/index.html
@@ -20,13 +20,61 @@
         </div>
         </header>
         <main class="main">
-            <ul>
-                <li>Product 1</li>
-                <li>Product 2</li>
-                <li>Product 3</li>
-                <li>Product 4</li>
-                <li>Product 5</li>
+            <div class="content">
+            <ul class="products">
+                <li class="product">
+                    <img class="product-image" src='./images/p1.jpg' alt="product 1 image">
+                    <div class="product-name">
+                        <a href="product.html">Macbook Pro 2020 Retina Display</a>
+                    </div>
+                    <div class="product-brand">Apple</div>
+                    <div class='product-price'>$999</div>
+                    <div class="product-rating">4.75 (10 reviews)</div>
+
+                </li>
+                <li class="product">
+                    <img class="product-image" src='./images/p1.jpg' alt="product 1 image">
+                    <div class="product-name">
+                        <a href="product.html">Macbook Pro 2020 Retina Display</a>
+                    </div>
+                    <div class="product-brand">Apple</div>
+                    <div class='product-price'>$999</div>
+                    <div class="product-rating">4.75 (10 reviews)</div>
+
+                </li>
+                <li class="product">
+                    <img class="product-image" src='./images/p1.jpg' alt="product 1 image">
+                    <div class="product-name">
+                        <a href="product.html">Macbook Pro 2020 Retina Display</a>
+                    </div>
+                    <div class="product-brand">Apple</div>
+                    <div class='product-price'>$999</div>
+                    <div class="product-rating">4.75 (10 reviews)</div>
+
+                </li>
+                <li class="product">
+                    <img class="product-image" src='./images/p1.jpg' alt="product 1 image">
+                    <div class="product-name">
+                        <a href="product.html">Macbook Pro 2020 Retina Display</a>
+                    </div>
+                    <div class="product-brand">Apple</div>
+                    <div class='product-price'>$999</div>
+                    <div class="product-rating">4.75 (10 reviews)</div>
+
+                </li>
+                <li class="product">
+                    <img class="product-image" src='./images/p1.jpg' alt="product 1 image">
+                    <div class="product-name">
+                        <a href="product.html">Macbook Pro 2020 Retina Display</a>
+                    </div>
+                    <div class="product-brand">Apple</div>
+                    <div class='product-price'>$999</div>
+                    <div class="product-rating">4.75 (10 reviews)</div>
+
+                </li>
+                
             </ul>
+        </div>
         </main>
         <footer class="footer">
             All rights reserved.
