--- a/template/style.css
+++ b/template/style.css
@@ -61,3 +61,71 @@ body {
     justify-content: center;
     align-items: center;
 }
+
+a{
+    text-decoration: none;
+}
+
+a:hover{
+    color: #ff8080;
+}
+
+/* Home Screen */
+.products{
+    /* because we want to display the contents right next to each other */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    /* to wrap the products to fit in the page and not overflow */
+}
+
+.products li{
+    list-style-type: none;
+    padding: 0%;
+    flex: 0 1 34rem;
+    /* 0 flex grow, 1 flex shrink and 34rem flex width */
+    margin: 1rem;
+    height: 50rem;
+    border-bottom: .1rem #c0c0c0 solid;
+}
+
+.product{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    /* justify content puts space between items to make them more appealing */
+    height: 100%;
+}
+
+.product-name{
+    font-size: 2.4rem;
+    font-weight: bold;
+}
+
+.product-name :hover{
+    color: #203040;
+    font-weight: bold;
+}
+
+.product-brand{
+    font-size: 1.5rem;
+    color: #808080;
+}
+
+.product-price{
+    font-size: 2.0rem;
+    color: black;
+    font-weight: bolder;
+}
+
+.product-image{
+    max-width: 34rem;
+    max-height: 34rem;
+}
+
+.product-rating{
+    font-size: 1.2rem;
+    color: #203040;
+    margin-bottom: 1rem;
+}
