--- a/template/index.html
+++ b/template/index.html
@@ -12,6 +12,9 @@
     <div class="grid-container">
         <header class="header">
         <div class="brand">
+            <button onclick="openMenu()">
+                &#9776;
+            </button>
             <a href="index.html">Maurya's Store</a>
         </div>
         <div class="header-links">
@@ -19,6 +22,20 @@
             <a href="login.html">Login</a>
         </div>
         </header>
+        <aside class="sidebar">
+            <h3>Categories</h3>
+            <button class="sidebar-closeButton" onclick="closeMenu()">
+                X
+            </button>
+            <ul>
+                <li>
+                    <a href="index.html">Laptops</a>
+                </li>
+                <li>
+                    <a href="index.html">Cell Phones</a>
+                </li>
+            </ul>
+        </aside>
         <main class="main">
             <div class="content">
             <ul class="products">
@@ -72,7 +89,7 @@
                     <div class="product-rating">4.75 (10 reviews)</div>
 
                 </li>
-                
+
             </ul>
         </div>
         </main>
@@ -80,5 +97,15 @@
             All rights reserved.
         </footer>
     </div>
+    <!-- the function that will be an onclick event for the button -->
+    <!-- openMenu to open the sidebar and closeMenu to close the sidebar≠–= -->
+    <script>
+        function openMenu(){
+            document.querySelector('.sidebar').classList.add('open');
+        }
+        function closeMenu(){
+            document.querySelector('.sidebar').classList.remove('open');
+        }
+    </script>
 </body>
 </html>
