--- a/template/style.css
+++ b/template/style.css
@@ -129,3 +129,41 @@ a:hover{
     color: #203040;
     margin-bottom: 1rem;
 }
+
+/* sidebar */
+.brand button{
+    font-size: 3rem;
+    padding: 0.5rem;
+    background: none;
+    border: none;
+    color: #ffffff;
+    cursor: pointer;
+}
+
+.sidebar {
+    position: fixed;
+    /* position fixed to keep the sidebar on top of the screen */
+    transform: translateX(-30rem);
+    width: 30rem;
+    /* transform and width ensures that the sidebar is left outside of the screen */
+    background-color: #f0f0f0;
+    height: 100%;
+}
+
+.sidebar.open{
+    transform: translateX(0);
+}
+
+.sidebar-closeButton{
+    border-radius: 50%;
+    border: 0.1rem #000000 solid;
+    width: 3rem;
+    height: 3rem;
+    padding: 0.5rem;
+    font-size: 2rem;
+    cursor: pointer;
+    position: absolute;
+    right: 0.5rem;
+    top: 1.5rem;
+
+}
