--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,13 +1,169 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+html {
+  font-size: 62.5%; 
+  /* default size for the browser is 16px * 62.5 = 10px = 1 rem */
+  box-sizing: border-box;
+  /* helps us organize the content of the html page */
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font: 1.6rem Helvetica;
+  height: 100vh;
+  /* vh is viewport height */
+  margin: 0;
+}
+.grid-container {
+  display: grid;
+  grid-template-areas: 
+  "header"
+  "main"
+  "footer";
+  grid-template-columns: 1fr;
+  grid-template-rows: 5rem 1fr 5rem;
+  /* 5 rem for the header 1 fragment for main and again 5 rem for the footer */
+  height: 100%;
+}
+.header{
+  grid-area: header;
+  background-color: #203040;
+  color: #ffffff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.5rem;
+}
+.brand a{
+  color: #ffffff;
+  font-size: 2.5rem;
+  font-weight: bolder;
+  text-decoration: none;
+}
+.brand :hover{
+  color: peru;
+}
+.header-links a{
+  color: #ffffff;
+  font-size: 1.75rem;
+  font-weight: bold;
+  text-decoration: none;
+  /* text-decoration none removes an underline from the links */
+}
+.header-links :hover{
+  color: orangered;
+}
+.main{
+  grid-area: main;
+}
+.footer{
+  grid-area: footer;
+  background-color: #203040;
+  color: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+a{
+  text-decoration: none;
+}
+
+a:hover{
+  color: #ff8080;
+}
+
+/* Home Screen */
+.products{
+  /* because we want to display the contents right next to each other */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  /* to wrap the products to fit in the page and not overflow */
+}
+
+.products li{
+  list-style-type: none;
+  padding: 0%;
+  flex: 0 1 34rem;
+  /* 0 flex grow, 1 flex shrink and 34rem flex width */
+  margin: 1rem;
+  height: 50rem;
+  border-bottom: .1rem #c0c0c0 solid;
+}
+
+.product{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  /* justify content puts space between items to make them more appealing */
+  height: 100%;
+}
+
+.product-name{
+  font-size: 2.4rem;
+  font-weight: bold;
+}
+
+.product-name :hover{
+  color: #203040;
+  font-weight: bold;
+}
+
+.product-brand{
+  font-size: 1.5rem;
+  color: #808080;
+}
+
+.product-price{
+  font-size: 2.0rem;
+  color: black;
+  font-weight: bolder;
+}
+
+.product-image{
+  max-width: 34rem;
+  max-height: 34rem;
+}
+
+.product-rating{
+  font-size: 1.2rem;
+  color: #203040;
+  margin-bottom: 1rem;
+}
+
+/* sidebar */
+.brand button{
+  font-size: 3rem;
+  padding: 0.5rem;
+  background: none;
+  border: none;
+  color: #ffffff;
+  cursor: pointer;
+}
+
+.sidebar {
+  position: fixed;
+  /* position fixed to keep the sidebar on top of the screen */
+  transform: translateX(-30rem);
+  width: 30rem;
+  /* transform and width ensures that the sidebar is left outside of the screen */
+  background-color: #f0f0f0;
+  height: 100%;
+}
+
+.sidebar.open{
+  transform: translateX(0);
+}
+
+.sidebar-closeButton{
+  border-radius: 50%;
+  border: 0.1rem #000000 solid;
+  width: 3rem;
+  height: 3rem;
+  padding: 0.5rem;
+  font-size: 2rem;
+  cursor: pointer;
+  position: absolute;
+  right: 0.5rem;
+  top: 1.5rem;
+
 }
