--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -171,3 +171,35 @@ a:hover{
   top: 1.5rem;
 
 }
+
+/* product details */
+
+.details{
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  flex-wrap: wrap;
+
+}
+
+.details-image{
+  flex: 2 1 60rem;
+}
+
+.details-image img{
+  max-width: 60rem;
+  widows: 100%;
+}
+
+.details-info{
+  flex: 1 1 30rem;
+}
+
+.details-action{
+  flex: 1 1 30rem;
+}
+
+.details-info ul, .details-action ul{
+  list-style-type: none;
+  padding: 0%;
+}
