added style elements to the products page

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -179,7 +179,7 @@ a:hover{
   justify-content: space-between;
   align-items: flex-start;
   flex-wrap: wrap;
-
+  padding: 1rem;
 }
 
 .details-image{
@@ -202,4 +202,37 @@ a:hover{
 .details-info ul, .details-action ul{
   list-style-type: none;
   padding: 0%;
+}
+
+.details-info li, .details-action li{
+  margin-bottom: 1rem;
+}
+
+.back-to-result{
+  padding: 1rem;
+}
+
+.details-action{
+  border: 0.1rem #808080 solid;
+  border-radius: 0.5rem;
+  background-color: #f8f8f8;
+  padding: 1rem;
+}
+
+.details-action ul li:last-child{
+  display: flex;
+  flex-direction: column;
+}
+.button{
+  padding: 1rem;
+  border: 0.1rem #808080 solid;
+  cursor: pointer;
+  border-radius: 0.5rem;
+  background-color: orange;
+}
+.button:hover{
+  border: 0.1rem #408080 solid;
+}
+.button.primary{
+  background-color: orangered;
 }
